# deep-learning-techniques-thesis

./: .gitignore  README.md  contributors.txt  requirements.txt  setup.sh
experiments/: .clang-format  CMakeLists.txt  README.md  experiment_imagenet.py  experiment_kitti.py  experiment_mnist.py  make_experiment.py
experiments/common/: lmdb_creator.cpp  lmdb_creator.hpp
experiments/datasets/: CMakeLists.txt  README.md  download_mnist.sh  download_sf.py
experiments/datasets/data/kitti/paths/: 01.txt  09.txt  10.txt
experiments/datasets/lmdb_utils/: make_mean.sh
experiments/datasets/src/: CMakeLists.txt  preprocess_kitti_egomotion.cpp  preprocess_kitti_siamese.cpp
experiments/datasets/src/imagenet/: create_ILSVRC_lmdbs.sh  create_ILSVRC_splits.py
experiments/datasets/src/kitti/: preprocess_kitti_siamese.cpp
experiments/datasets/src/lmdb_creator/: CMakeLists.txt  lmdb_creator.cpp
experiments/datasets/src/mnist/: preprocess_mnist_siamese.cpp  preprocess_mnist_standar.cpp
experiments/datasets/src/sun397/: create_SUN_lmdbs.sh  create_SUN_splits.py  preprocess_SUN.py
experiments/datasets/src/utils/: create_lmdb.sh  make_mean.sh  split_txt_files.sh
experiments/kitti/: CMakeLists.txt  preprocess_kitti_contrastive.cpp  preprocess_kitti_egomotion.cpp
experiments/kitti/data/: uncompress_file_parts.txt
experiments/kitti/data/paths/: 00.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt
experiments/kitti/prototxt/alexnet/: solver.prototxt  train_val.prototxt
experiments/kitti/prototxt/contrastive/: siamese_kitti.prototxt  solver.prototxt
experiments/kitti/prototxt/egomotion/: example_train.sh  siamese_kitti.prototxt  solver.prototxt
experiments/kitti/prototxt/evaluation/: standar_kitti.prototxt
experiments/kitti/src/: preprocess_kitti_contrastive.cpp
experiments/kitti/test/deploy/: deploy.prototxt
experiments/lmdb_utils/: create_lmdb.sh  split_txt_files.sh
experiments/mnist/: CMakeLists.txt  README.md  create_mnist_images.cpp  download_mnist.sh  make_mean.sh  preprocess_mnist.cpp  preprocess_mnist_contrastive.cpp  preprocess_mnist_egomotion.cpp  preprocess_mnist_siamese.cpp  preprocess_mnist_standar.cpp
experiments/mnist/data/: README.md
experiments/mnist/prototxt/: finetuning_mnist.prototxt  siamese_mnist.prototxt  siamese_mnist_SFA.prototxt  siamese_mnist_contrastive.prototxt  solver.prototxt  solver_SFA.prototxt  solver_contrastive.prototxt  solver_finetuning.prototxt
experiments/mnist/prototxt/contrastive/: siamese_mnist_contrastive.prototxt  solver.prototxt
experiments/mnist/prototxt/egomotion/: siamese_mnist.prototxt  solver.prototxt
experiments/mnist/prototxt/finetuning/: finetuning_mnist.prototxt  solver.prototxt
experiments/mnist/prototxt/standar/: solver.prototxt  train_mnist.prototxt
experiments/mnist/src/: mnist_utils.cpp  mnist_utils.hpp  preprocess_mnist_siamese.cpp
experiments/mnist/test/: confussion_matrix.py  download_latest_log.sh  download_latest_snapshot.sh  plot_caffe_log.py
experiments/mnist/test/deploy/: deploy_finetuning_mnist.prototxt
experiments/scene_recognition/: README.md  create_SUN_splits.py
experiments/scene_recognition/data/paths/: Testing_02.txt  Testing_03.txt  Training_01.txt  Training_02.txt  Training_03.txt
experiments/scene_recognition/prototxt/: README.md
experiments/scene_recognition/prototxt/L5/: scene.prototxt  solver.prototxt
experiments/sf/: download_sf.py
experiments/utils/: Test.ipynb  cnn_factory.py  generate_deploys.py  solver_factory.py  visualize-filters-evolution.ipynb  visualize-filters.py
experiments/utils/deploys/: imagenet.prototxt  kitti.prototxt  mnist.prototxt
experiments/utils/nets/: cnn_factory.py  layers_wrappers.py
experiments/utils/solver/: solver.py
experiments/visualize_filters/: check-lmdb-content.py  check-mnist-lmdb.py  visual-filters.ipynb  visualize-filters.py
report/: MarcoTeorico.bib  MarcoTeorico.org  compile_report.sh  compile_slides.sh  draft.bib  draft.org  slides.tex
